# Effective-Algorithms-Project

./: .gitignore  README.md  main.cpp
Step01/: CMakeLists.txt  main.cpp
Step01/utils/structures/: Details.h  Matrix.cpp  Matrix.h
Step02/: .directory  CMakeLists.txt  main.cpp
Step02/algorithms/: BruteForce.cpp  BruteForce.h  DynamicProgramming.cpp  DynamicProgramming.h  Dynamic_programming.cpp  Dynamic_programming.h
Step02/utils/structures/: Matrix.cpp  Matrix.h
Step03/: CMakeLists.txt  main.cpp
Step03/algorithms/: DynamicProgramming.h  SimulatedAnnealing.cpp
Step04/: CMakeLists.txt  main.cpp
Step04/algorithms/: AntColony.cpp  AntColony.h  BruteForce.cpp  DynamicProgramming.cpp  Genetic.cpp  Genetic.h  SimulatedAnnealing.h
Step04/utils/structures/: Matrix.h
algorithms/: AntColony.cpp  AntColony.h  BruteForce.cpp
utils/file manager/: FileManager.cpp  FileManager.h
utils/structures/: Details.h  Matrix.cpp
